--- a/Site/package.json
+++ b/Site/package.json
@@ -1,20 +1,24 @@
 {
   "name": "vite-react-typescript-starter",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
- "scripts": {
-  "dev": "npx concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-  "dev:backend": "node app.js",
-  "dev:frontend": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview"
-}
-,
+  "scripts": {
+    "dev": "npx concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "vite",
+    "dev:backend": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "test:db": "node ./src/db.test.js"
+  },
   "dependencies": {
     "caniuse-lite": "^1.0.30001743",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
     "lucide-react": "^0.344.0",
+    "mysql2": "^3.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -29,6 +33,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "nodemon": "^3.1.10",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
