--- a/SITE/package.json
+++ b/SITE/package.json
@@ -4,9 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npx concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
-    "dev:frontend": "vite",
-    "dev:backend": "nodemon src/server.js ",
+    "dev": "vite",
     "start": "node src/server.js",
     "build": "vite build",
     "preview": "vite preview",
